[package]
name = "cannon"
version = "0.0.1"
authors = ["MaximFischuk <mfischuk@vareger.com>"]
edition = "2018"

[[bin]]
name = "cannon"
path = "./src/main.rs"

[dependencies]
log = "0.4.11"
fern = "0.6.0"
clap = "2.33.3"
structopt = "0.3.16"
config = "0.10.1"
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.57"
serde_bytes = "0.11.5"
serde_regex = "1.1.0"
derivative = "2.1.1"
futures = "0.3.5"
signal-hook = "0.1.16"
regex = "1.3.9"
jsonpath = "0.1.1"
chrono = "0.4.15"
hyper = "0.13.7"
hyper-tls = "0.4.3"
tokio = { version = "0.2", features = ["full"] }
liquid = "0.21.1"
base64 = "0.12.3"
csv = "1.1.3"
sxd-xpath = "0.4.2"
kstring = "1.0.0"
