[package]
name = "cannon"
version = "0.0.1"
authors = ["MaximFischuk <mfischuk@vareger.com>"]
edition = "2018"

[[bin]]
name = "cannon"
path = "./src/main.rs"

[dependencies]
log = "0.4.11"
fern = "0.6.0"
clap = "2.33.3"
structopt = "0.3.20"
config = "0.10.1"
serde_derive = "1.0.117"
serde = "1.0.117"
serde_json = "1.0.59"
serde_bytes = "0.11.5"
serde_regex = "1.1.0"
derivative = "2.1.1"
futures = "0.3.6"
signal-hook = "0.1.16"
regex = "1.4.1"
jsonpath = "0.1.1"
chrono = "0.4.19"
reqwest = { version = "0.10", features = ["blocking"] }
http = "0.2.1"
tokio = { version = "0.2", features = ["full"] }
liquid = "0.21.4"
base64 = "0.13.0"
csv = "1.1.3"
sxd-xpath = "0.4.2"
kstring = "1.0.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
bytes = "0.6.0"
lazy_static = "1.4.0"
